<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu"
        android:background="@drawable/rectangulo"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="186dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-light"
                android:paddingLeft="@dimen/padding"
                android:paddingTop="@dimen/padding"
                android:text="@string/Nombre"
                android:textColor="@color/letras"
                android:textSize="@dimen/titulos" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-light"
                android:paddingLeft="@dimen/padding"
                android:paddingTop="@dimen/padding"
                android:text="@string/User"
                android:textColor="@color/letras"
                android:textSize="@dimen/texto" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            app:srcCompat="@drawable/henry"
            android:layout_width="@dimen/fotoperfil"
            android:layout_height="@dimen/fotoperfil"
            android:layout_margin="@dimen/margin"
            android:layout_weight="0.3"
            android:background="@drawable/henry"
            android:scaleType="fitCenter"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="236dp"
        android:orientation="vertical"
        android:padding="@dimen/margin">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/ventas"
            android:textSize="@dimen/texto" />

        <LinearLayout
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/sabritas"
                android:textSize="@dimen/texto" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/padding"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/sab"
                android:textSize="@dimen/texto" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/leche"
                android:textSize="@dimen/texto" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/le"
                android:textSize="@dimen/texto" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/cebolla"
                android:textSize="@dimen/texto" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/ce"
                android:textSize="@dimen/texto" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView29"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:paddingLeft="@dimen/margin"
        android:text="@string/agregar"
        android:textSize="@dimen/texto" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/margin">

        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-light"
            android:inputType="textPersonName"
            android:text="Name"
            android:textColor="@color/letradecampo"
            android:textSize="@dimen/texto" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-light"
            android:inputType="textPersonName"
            android:text="Name"
            android:textColor="@color/letradecampo"
            android:textSize="@dimen/texto" />
    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/redondo"
        android:backgroundTint="@color/botones"
        android:text="Button"
        android:textColor="@color/letras" />

</LinearLayout>