<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu"
        android:background="@drawable/rectangulo"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="186dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-light"
                android:paddingLeft="@dimen/padding"
                android:paddingTop="@dimen/padding"
                android:text="@string/Nombre"
                android:textColor="@color/letras"
                android:textSize="@dimen/titulos" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-light"
                android:paddingLeft="@dimen/padding"
                android:paddingTop="@dimen/padding"
                android:text="@string/User"
                android:textColor="@color/letras"
                android:textSize="@dimen/texto" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            app:srcCompat="@drawable/henry"
            android:layout_width="@dimen/fotoperfil"
            android:layout_height="@dimen/fotoperfil"
            android:layout_margin="@dimen/margin"
            android:layout_weight="0.3"
            android:background="@drawable/henry"
            android:scaleType="fitCenter"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/emp"
            android:textSize="@dimen/texto" />

        <LinearLayout
            android:layout_width="368dp"
            android:layout_height="@dimen/campos"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/sofi"
                android:textSize="@dimen/texto" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/redondo"
                android:backgroundTint="@color/botones"
                android:padding="@dimen/padding"
                android:text="@string/eliminar"
                android:textColor="@color/letras" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/campos"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/juana"
                android:textSize="@dimen/texto" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/redondo"
                android:backgroundTint="@color/botones"
                android:padding="@dimen/padding"
                android:text="@string/eliminar"
                android:textColor="@color/letras" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/miguel"
                android:textSize="@dimen/texto" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/redondo"
                android:backgroundTint="@color/botones"
                android:padding="@dimen/padding"
                android:text="@string/eliminar"
                android:textColor="@color/letras" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>